<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about">About</string>
    <string name="aboutdetail">Copyright © Huawei Technologies Co., Ltd. 2010-2016. This program is protected by copyright laws and architecture laws. Unauthorized duplication is subject to civil liabilities and criminal liabilities.</string>
    <string name="account">Account</string>
    <string name="account_login_otherplace">Your account has logged in somewhere else.</string>
    <string name="accountsetinfo">If you have enabled an eSpace Mobile account, you will receive an email from the administrator. You can complete account settings following instructions in the email.</string>
    <string name="add_contact">Add Participant</string>
    <string name="add_friend">%1$s wants to add you as a contact.</string>
    <string name="add_friend_invite">has added you as a contact. Add him or her as your contact?</string>
    <string name="add_friend_reply">added you as a contact.</string>
    <string name="add_friend_success">The user accepted being added as your contact</string>
    <string name="add_group_hint">%1$s invites you to join the %2$s group.</string>
    <string name="add_new_number">Add New Number</string>
    <string name="added_contact">Selected</string>
    <string name="added_contact_list">Participant List</string>
    <string name="addfriendinvite">%1$s wants to add you as a contact.</string>
    <string name="addnew">Add as Contact</string>
    <string name="address">Address</string>
    <string name="addtocontact">Add to Existing Contact</string>
    <string name="addtofriend">Add as Contact</string>
    <string name="agree">Agree</string>
    <string name="agree_invite_ok">You have added %1$s as your contact.</string>
    <string name="all_bulletins">All Bulletins</string>
    <string name="allcontact">All Contacts</string>
    <string name="away">Away</string>
    <string name="awayNumber">Away Number</string>
    <string name="back">Back</string>
    <string name="back_talk">Resume Talk Right</string>
    <string name="basic_setting">Basics</string>
    <string name="bb_call_no_choose">Select a number</string>
    <string name="begin">Start</string>
    <string name="begin_date">Start Date</string>
    <string name="begin_time">Start Time</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create">Create</string>
    <string name="btn_display">Display</string>
    <string name="btn_done">Finish</string>
    <string name="btn_ignore">Ignore</string>
    <string name="btn_send">Send</string>
    <string name="btn_start_using">Enable</string>
    <string name="btn_sure">OK</string>
    <string name="bug_feedback">Fault Report</string>
    <string name="bulletin">System Notice</string>
    <string name="bulletin_loading_context">Loading the bulletin content…</string>
    <string name="bulletin_refresh_list">Updating the bulletin list…</string>
    <string name="busy">Busy</string>
    <string name="busyNumber">Busy Number</string>
    <string name="call">Call</string>
    <string name="call_come">Incoming Call…</string>
    <string name="call_down">End Call</string>
    <string name="call_forward_mynumber">My Number</string>
    <string name="call_forward_s_vibrate">Sequential Ringing</string>
    <string name="call_forward_t_vibrate">Simultaneous Ringing</string>
    <string name="call_forward_transphone">Forward Call</string>
    <string name="call_forward_transphone_number1">Transferred-to Number 1</string>
    <string name="call_forward_transphone_number2">Transferred-to Number 2</string>
    <string name="call_forward_transphone_number3">Transferred-to Number 3</string>
    <string name="call_forward_transphone_type">Transfer Mode</string>
    <string name="call_history">Call Records</string>
    <string name="call_in_progress">A call is ongoing</string>
    <string name="call_on">Answer</string>
    <string name="call_out">Calling…</string>
    <string name="call_refuse">Reject</string>
    <string name="call_setting">Call Settings</string>
    <string name="call_setting_auto_model">Automatic mode</string>
    <string name="call_setting_call_type">Calling Mode</string>
    <string name="call_setting_callback_number">Callback Num.</string>
    <string name="call_setting_forward">Transfer Incoming Calls</string>
    <string name="call_setting_local">Mobile Phone Call</string>
    <string name="call_stop">The call ends</string>
    <string name="call_sure">Accept</string>
    <string name="call_talking">Talking…</string>
    <string name="call_voip_fail">Failed to make the call</string>
    <string name="callback_number">Callback Number</string>
    <string name="callback_number_empty">The callback number cannot be empty</string>
    <string name="callbacknumber_failure">Call failure. The callback number is restricted and cannot be connected</string>
    <string name="caller_ctc_quit">End the meeting?</string>
    <string name="calllogtime">%1$s min %2$s sec</string>
    <string name="calllogyear">%1$s/%2$s %3$s:%4$s</string>
    <string name="callnumber_failure">Call failure. The number is restricted and cannot be connected</string>
    <string name="conf_hour_time">%1$s h %2$s min</string>
    <string name="conf_hour_only">%1$s h</string>
    <string name="conf_min_time">%1$s min</string>
    <string name="calltime">%1$s min %2$s sec</string>
    <string name="calltime_hour">%1$s h %2$s min %3$s sec</string>
    <string name="cancel_add_contact">Cancel the operation?</string>
    <string name="cancel_presenter">Cancel Presenter</string>
    <string name="cancel_prompt">Cancelling login,Please wait…</string>
    <string name="cancelhint">Do not remind again</string>
    <string name="cannotaddyourself">Adding yourself as a contact is not allowed</string>
    <string name="change">Switch</string>
    <string name="chat_history_with">IM history with %1$s</string>
    <string name="chat_msg">Message</string>
    <string name="chat_msg_send_failed">send failed</string>
    <string name="chat_note">Touch here to chat</string>
    <string name="chat_with">IMs with %1$s</string>
    <string name="check_missed">Missed</string>
    <string name="checkifdup">The number exists.</string>
    <string name="clear">Clear Account ID</string>
    <string name="clear_msgs">Clear</string>
    <string name="clearing">Clearing…</string>
    <string name="conf_begin">Unfinished Meetings</string>
    <string name="conf_create">Meeting</string>
    <string name="conf_create_booking_prompt">Creating a scheduled meeting…</string>
    <string name="conf_create_date_day">/</string>
    <string name="conf_create_date_done_prompt">The start time cannot be earlier than the current phone time.</string>
    <string name="conf_create_date_month">/</string>
    <string name="conf_create_date_prompt">The end time must be later than the start time.</string>
    <string name="conf_create_date_year">/</string>
    <string name="conf_create_init_subject_suffix">%1$s\'s meeting</string>
    <string name="conf_create_init_time">Now</string>
    <string name="conf_create_prompt">Creating a meeting…</string>
    <string name="conf_detail_attend_failed">Failed to join the meeting</string>
    <string name="conf_detail_attend_prompt">The access number cannot be empty</string>
    <string name="conf_detail_btn_attend_onlypc">Unable to join encrypted meeting on mobile clients</string>
    <string name="conf_detail_btn_cancel_book">Cancel Meeting</string>
    <string name="conf_detail_btn_cancel_prompt">Canceling…</string>
    <string name="conf_detail_btn_end">The meeting has ended</string>
    <string name="conf_detail_btn_re_begin">Reconvene</string>
    <string name="conf_detail_cancel_book_prompt">Cancel the scheduled meeting?</string>
    <string name="conf_detail_delete_prompt">Delete the meeting?</string>
    <string name="conf_detail_type_multi">Multimedia Meeting</string>
    <string name="conf_end">Ended Meetings</string>
    <string name="conf_id">Meeting ID</string>
    <string name="conf_join_number">Meeting Access Number</string>
    <string name="conf_main_item_emcee_prefix">Moderator:</string>
    <string name="conf_main_load_prompt">Loading the meeting list…</string>
    <string name="conf_main_no_begin">No unfinished meeting</string>
    <string name="conf_main_no_ended_prompt">No ended meeting</string>
    <string name="conf_main_no_prompt">No meeting</string>
    <string name="conf_main_title_all">Meetings</string>
    <string name="conf_main_title_end">Ended Meetings</string>
    <string name="conf_member_add">Joining…</string>
    <string name="conf_member_detail">View Participant Details</string>
    <string name="conf_members_colon">Attendee</string>
    <string name="conf_name_empty">Enter the conference subject</string>
    <string name="conf_nodetail">No details</string>
    <string name="conf_person_list">Participant List (%1$d)</string>
    <string name="conf_share_not_begin_prompt">Data sharing has not started</string>
    <string name="conf_total">All Meetings</string>
    <string name="conf_type_colon">Meeting Type:</string>
    <string name="conference_call">VoiceConf.</string>
    <string name="conference_calling">Voice Conf.</string>
    <string name="conference_data_call">Multimedia Conf.</string>
    <string name="conference_data_calling">Multimedia Conf.</string>
    <string name="conference_members">Participants</string>
    <string name="conference_time">Duration</string>
    <string name="conference_time_length">Duration</string>
    <string name="conference_type">Type</string>
    <string name="connect_error">Server connection failure. Check the network settings</string>
    <string name="connectnettimefail">Failed to connect to network</string>
    <string name="connectnettimeout">Network connection timed out</string>
    <string name="constant_group">Groups</string>
    <string name="contact_already_exist">The user is in your contact list</string>
    <string name="contact_detail">Contact Details</string>
    <string name="contact_load_fail">Load failure</string>
    <string name="contact_load_failed_notice">Failed to load contacts. Load again</string>
    <string name="contact_load_success">Load success</string>
    <string name="contaddcontact">The contact cannot be added. Try again</string>
    <string name="copy">Copy</string>
    <string name="copy_contact">Copy Contacts</string>
    <string name="copy_iphone">Copy</string>
    <string name="core_upgrade">Your current version has yet to be updated. Download the latest version from Google Play, or Huawei Hispace</string>
    <string name="info">Information</string>
    <string name="join_conference">Join Meeting</string>
    <string name="Moderator">Moderator</string>
    <string name="select_group_tag">Category</string>
    <string name="input_name">Enter a category name.</string>
    <string name="new_label">Add Category</string>
    <string name="conf_access_code">PassCode</string>
    <string name="conf_access_pwd">Access Password</string>
    <string name="internet">Internet</string>
    <string name="intranet">Intranet</string>
</resources>